# lsn_measurements

./: basel.py  create_ni_channels.py  detect 3 gui vs current.py  detect 3 gui vs power.py  detect+lifetime vs bias gui.py  iv curve gui.py  iv spectrum gui.py  lifetime vs bias gui + aux.py  lifetime vs bias gui.py  lifetime vs frequency gui.py  magnicon.py  oscilloscope.py  pyproject.toml  requirements.txt  scd vs aux voltage gui.py  scd vs frequency gui.py  scd vs power gui.py  scd vs temperature + aux voltage gui.py  scd vs temperature gui.py  spectrum gui.py  triton monitor.py
app_base/: __init__.py  detect.py  detect_lifetime.py  lifetime.py  lifetime_aux.py  scd.py  scd_aux.py
arduino/RJ45_to_RS232/: README.md  RJ45_to_RS232.ino
backend/: calibration.py  hardware.py
backend/communication/: __init__.py  anapico_communication.py  gsm7_communication.py  port_scanner.py  rs_communication.py  scpi_device.py  (+2 more)
hardware/: __init__.py  anapico.py  gsm7.py  hmf2550.py  rs.py  scpi_device.py  spike.py  triton.py
measurement/: __init__.py  calibration.py  detect.py  iv_curve.py  lifetime.py  lifetime_aux.py  noise.py  scd.py  scd_aux.py
ui/: detect_gui.py  detect_lifetime_gui.py  file_path_entry.py  histogram.py  lifetime_aux_gui.py  lifetime_gui.py  safe_button.py  scd_aux_gui.py  scd_gui.py
utils/: __init__.py  config.py  connected_points.py  count.py  decimalslice.py  files_io.py  filewriter.py  floatslice.py  ni.py  port_scanner.py  printqueue.py  processing.py  si.py  slice_sequence.py  string_utils.py  teepath.py  tick_strings.py  tkinter_message.py
(+24 files in other folders)
